--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   ],
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
     "pg-promise": "^11.6.0",
     "uuid": "^9.0.1"
