--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   ],
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
+    "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
+    "pg": "^8.13.0",
     "pg-promise": "^11.6.0",
     "uuid": "^9.0.1"
   }
